--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "Node DB 2 Module Challenge",
     "main": "index.js",
     "scripts": {
-        "server": "nodemon index.js"
+        "server": "nodemon server.js",
+        "start": "node server.js"
     },
     "author": "Lambda School",
     "devDependencies": {
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.4"
     },
     "dependencies": {
+        "express": "^4.17.1",
         "knex": "^0.21.2",
         "sqlite3": "^5.0.0"
     }
